# restaurant_menu_bot

./: .env_sample  .gitignore  Dockerfile  README.md  __main__.py  alembic.ini  pyproject.toml  requirements.txt  sample.env
alembic/: env.py
alembic/versions/: 2275d54f5ea4_create_order_table.py  48f326401421_описание_миграции.py  57ae316011c0_попытка_6.py  7c4de6cb3156_попытка_7.py  94cee06f8577_3_версия.py  b24f6bcd06d8_попытка_5.py  be68f6a1d07f_cost_model_order.py  e69987ad09ce_попытка_8.py  ee4ec1d0d602_попытка_4.py  fc94a9a01b8b_вторая_версия.py
fastapi-project/: app.py  settings.py
restaurant_menu/: app.py  logger.py  middlewares.py  routers.py  settings.py
restaurant_menu/core/: config.py
restaurant_menu/models/: database.py  models.py  pydantic.py
restaurant_menu/routes/: api.py
restaurant_menu/utils/: log_config.py
tests/: __init__.py  base_test.py  conftest.py  kgkgkg.py  test_db.py
tools/scripts/: export_openapi.py  healthcheck.py
