[tool.poetry]
name = "restaurant-menu-bot"
version = "0.1.0"
description = "Бот-официант"
authors = ["team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
pydantic = "1.10.15"
uvicorn = "0.13.4"
loguru = "0.5.3"
python-dotenv = "0.17.0"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
requests = "^2.31.0"
pytest = "7.4.4"
pytest-lazy-fixture = "0.6.3"
types-pytest-lazy-fixture = "0.6.3"
alembic = "^1.13.1"
asyncpg = "0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"